--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<!-- SEO META TAGS -->
-<meta name="description" content="Chuyên cung cấp thiết bị y tế thú y chất lượng cao: máy siêu âm, dao mổ điện, máy X-ray và nhiều sản phẩm khác. Hỗ trợ tận tâm toàn quốc.">
-<meta name="keywords" content="thiết bị thú y, thiết bị y tế thú y, máy siêu âm thú y, máy X-ray thú y, dao mổ điện thú y, vet equipment, veterinary medical equipment">
-<meta name="author" content="VetCompany">
-<meta name="robots" content="index, follow">
 
-<!-- Open Graph for Facebook -->
-<meta property="og:title" content="Thiết bị y tế thú y - VetCompany" />
-<meta property="og:description" content="Cung cấp thiết bị y tế thú y chất lượng cao - Hỗ trợ tận tâm toàn quốc." />
-<meta property="og:image" content="%PUBLIC_URL%/images/logo.png" />
-<meta property="og:url" content="https://www.vetcompany.vn" />
-<meta property="og:type" content="website" />
+    <!-- Google Analytics (GA4) -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5VDR31YX19"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-5VDR31YX19');
+    </script>
 
-<!-- Twitter Card -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Thiết bị y tế thú y - VetCompany" />
-<meta name="twitter:description" content="Cung cấp thiết bị y tế thú y chất lượng cao - Hỗ trợ tận tâm toàn quốc." />
-<meta name="twitter:image" content="%PUBLIC_URL%/images/logo.png" />
-    <title>Thiết bị thú y - Vet Equipment</title>
+    <!-- SEO META TAGS -->
+    <meta name="description" content="Chuyên cung cấp thiết bị y tế thú y chất lượng cao: máy siêu âm, dao mổ điện, máy X-ray và nhiều sản phẩm khác. Hỗ trợ tận tâm toàn quốc.">
+    <meta name="keywords" content="thiết bị thú y, thiết bị y tế thú y, máy siêu âm thú y, máy X-ray thú y, dao mổ điện thú y, vet equipment, veterinary medical equipment">
+    <meta name="author" content="VetCompany">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph for Facebook -->
+    <meta property="og:title" content="Thiết bị y tế thú y - VetCompany" />
+    <meta property="og:description" content="Cung cấp thiết bị y tế thú y chất lượng cao - Hỗ trợ tận tâm toàn quốc." />
+    <meta property="og:image" content="https://vetcompany.vn/images/logo.png" />
+    <meta property="og:url" content="https://vetcompany.vn" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Thiết bị y tế thú y - VetCompany" />
+    <meta name="twitter:description" content="Cung cấp thiết bị y tế thú y chất lượng cao - Hỗ trợ tận tâm toàn quốc." />
+    <meta name="twitter:image" content="https://vetcompany.vn/images/logo.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+
+    <!-- Base CSS -->
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      html, body {
+        font-family: 'Roboto', sans-serif;
+        background-color: #f9f9fb;
+        color: #222;
+        line-height: 1.6;
+        scroll-behavior: smooth;
+      }
+
+      img {
+        max-width: 100%;
+        height: auto;
+        display: block;
+      }
+
+      a {
+        color: inherit;
+        text-decoration: none;
+      }
+    </style>
+
+    <title>Thiết bị thú y - IPP</title>
   </head>
   <body>
     <div id="root"></div>
