--- a/public/index.html
+++ b/public/index.html
@@ -2,46 +2,65 @@
 <html lang="vi">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- ✅ Reset cơ bản và font mặc định -->
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      html, body {
+        font-family: 'Roboto', sans-serif;
+        background-color: #f9f9fb;
+        color: #222;
+        line-height: 1.6;
+      }
+      img {
+        max-width: 100%;
+        height: auto;
+        display: block;
+      }
+    </style>
 
-    <!-- Google Analytics (GA4) -->
-    <!-- Google tag (gtag.js) -->
+    <!-- ✅ Google Analytics (GA4) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-5VDR31YX19"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
+      function gtag(){ dataLayer.push(arguments); }
       gtag('js', new Date());
       gtag('config', 'G-5VDR31YX19');
     </script>
 
-    <!-- SEO META TAGS -->
-    <meta name="description" content="Chuyên cung cấp thiết bị y tế thú y chất lượng cao: máy siêu âm, dao mổ điện, máy X-ray và nhiều sản phẩm khác. Hỗ trợ tận tâm toàn quốc.">
-    <meta name="keywords" content="thiết bị thú y, thiết bị y tế thú y, máy siêu âm thú y, máy X-ray thú y, dao mổ điện thú y, vet equipment, veterinary medical equipment">
-    <meta name="author" content="VetCompany">
-    <meta name="robots" content="index, follow">
+    <!-- ✅ SEO META TAGS -->
+    <meta name="description" content="Chuyên cung cấp thiết bị y tế thú y chất lượng cao: máy siêu âm, dao mổ điện, máy X-ray và nhiều sản phẩm khác. Hỗ trợ tận tâm toàn quốc." />
+    <meta name="keywords" content="thiết bị thú y, thiết bị y tế thú y, máy siêu âm thú y, máy X-ray thú y, dao mổ điện thú y, vet equipment, veterinary medical equipment" />
+    <meta name="author" content="VetCompany" />
+    <meta name="robots" content="index, follow" />
 
-    <!-- Open Graph for Facebook -->
+    <!-- ✅ Open Graph (Facebook) -->
     <meta property="og:title" content="Thiết bị y tế thú y - VetCompany" />
     <meta property="og:description" content="Cung cấp thiết bị y tế thú y chất lượng cao - Hỗ trợ tận tâm toàn quốc." />
     <meta property="og:image" content="https://vetcompany.vn/images/logo.png" />
     <meta property="og:url" content="https://vetcompany.vn" />
     <meta property="og:type" content="website" />
 
-    <!-- Twitter Card -->
+    <!-- ✅ Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Thiết bị y tế thú y - VetCompany" />
     <meta name="twitter:description" content="Cung cấp thiết bị y tế thú y chất lượng cao - Hỗ trợ tận tâm toàn quốc." />
     <meta name="twitter:image" content="https://vetcompany.vn/images/logo.png" />
 
-    <!-- Favicon -->
+    <!-- ✅ Favicon -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
-    <!-- Google Fonts -->
+    <!-- ✅ Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
 
-    
     <title>Thiết bị thú y - IPP</title>
   </head>
   <body>
