Use logo.png as favicon (add apple-touch & shortcut links)

--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,10 @@
     <meta name="twitter:description" content="Cung cấp thiết bị y tế thú y chất lượng cao - Hỗ trợ tận tâm toàn quốc." />
     <meta name="twitter:image" content="https://vetcompany.vn/images/logo.png" />
 
-    <!-- ✅ Favicon -->
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <!-- ✅ Favicon - use project logo (PNG) and add apple-touch and shortcut fallback -->
+  <link rel="icon" href="/images/logo.png" sizes="32x32" />
+  <link rel="apple-touch-icon" href="/images/logo.png" />
+  <link rel="shortcut icon" href="/images/logo.png" />
 
     <!-- ✅ Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
